[package]
name = "url-audit"
version = "0.1.0"
edition = "2021"
description = "Learning Rust #5: Real CLI with clap, tokio, reqwest, concurrency, logging."
license = "MIT"
repository = "https://github.com/pribeiro-dev/learning-rust-05-url-audit"
authors = ["Pedro Ribeiro <pedroworibeiro@gmail.com>"]
rust-version = "1.74.0"


[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
csv = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
